--- a/vzgliad.html
+++ b/vzgliad.html
@@ -1,4 +1,5 @@
-<html>
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html>
 <head>
     <link rel="shortcut icon" href="img/son.png">
     <title>SIGHT</title>
@@ -6,14 +7,14 @@
     <script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
     <script>
     $(document).ready(function(){
-        //Скрыть PopUp при загрузке страницы
+        //Г‘ГЄГ°Г»ГІГј PopUp ГЇГ°ГЁ Г§Г ГЈГ°ГіГ§ГЄГҐ Г±ГІГ°Г Г­ГЁГ¶Г»
         PopUpHide();
     });
-    //Функция отображения PopUp
+    //Г”ГіГ­ГЄГ¶ГЁГї Г®ГІГ®ГЎГ°Г Г¦ГҐГ­ГЁГї PopUp
     function PopUpShow(){
         $("#popup1").show();
     }
-    //Функция скрытия PopUp
+    //Г”ГіГ­ГЄГ¶ГЁГї Г±ГЄГ°Г»ГІГЁГї PopUp
     function PopUpHide(){
         $("#popup1").hide();
     }
@@ -27,15 +28,15 @@
     <!--background: rgb(0, 0, 0, 0.7);-->
     <input type="checkbox" id="toggle-1">
     <div class="base" ; style="margin-top: 0px; margin-bottom: 0px;">
-        <p class="high" style="padding-left:40px; padding-right: 40px;">Фактор взгляда</p>
-        <p class="preHigh" style="padding-left:40px; padding-right: 40px;"><a id="vz">Зрительный контакт:</a></p>
+        <p class="high" style="padding-left:40px; padding-right: 40px;">Г”Г ГЄГІГ®Г° ГўГ§ГЈГ«ГїГ¤Г </p>
+        <p class="preHigh" style="padding-left:40px; padding-right: 40px;"><a id="vz">Г‡Г°ГЁГІГҐГ«ГјГ­Г»Г© ГЄГ®Г­ГІГ ГЄГІ:</a></p>
 
         <p class="normal" ; style="text-align:justify; padding-left:40px; padding-right: 40px;">
-            С собеседником (собеседниками) необходимо поддерживать зрительный контакт. Смотреть на собеседника надо примерно половину разговора, тогда это рассматривается как поддержание контакта. Если мы смотрим доброжелательно 60—70% времени (отведенного разговору) на собеседника, он понимает, что нравится нам.
-            Приветливый, с улыбкой, кратковременный взгляд в глаза рассматривается как сигнал положительного отношения, заинтересованности, симпатии, стремления к контакту.
-            При продолжительном общении этикет требует смотреть не в глаза, а в лицо, не фиксируя внимания на глазах собеседника. Пристальный взгляд в глаза рассматривается как проявление враждебности — не надо смотреть слишком пристально ни на кого.
-            При решении деловых вопросов надо использовать деловой взгляд — направленный на треугольник глаза — нос, это создает впечатление серьезности намерений.
-            При дружеском общении взгляд лучше опускать ниже — на треугольник глаза —рот, такой взгляд демонстрирует дружеское отношение, желание контактировать. Взгляд от глаз до груди и ниже, называется интимным, он показывает личную заинтересованность.
+            Г‘ Г±Г®ГЎГҐГ±ГҐГ¤Г­ГЁГЄГ®Г¬ (Г±Г®ГЎГҐГ±ГҐГ¤Г­ГЁГЄГ Г¬ГЁ) Г­ГҐГ®ГЎГµГ®Г¤ГЁГ¬Г® ГЇГ®Г¤Г¤ГҐГ°Г¦ГЁГўГ ГІГј Г§Г°ГЁГІГҐГ«ГјГ­Г»Г© ГЄГ®Г­ГІГ ГЄГІ. Г‘Г¬Г®ГІГ°ГҐГІГј Г­Г  Г±Г®ГЎГҐГ±ГҐГ¤Г­ГЁГЄГ  Г­Г Г¤Г® ГЇГ°ГЁГ¬ГҐГ°Г­Г® ГЇГ®Г«Г®ГўГЁГ­Гі Г°Г Г§ГЈГ®ГўГ®Г°Г , ГІГ®ГЈГ¤Г  ГЅГІГ® Г°Г Г±Г±Г¬Г ГІГ°ГЁГўГ ГҐГІГ±Гї ГЄГ ГЄ ГЇГ®Г¤Г¤ГҐГ°Г¦Г Г­ГЁГҐ ГЄГ®Г­ГІГ ГЄГІГ . Г…Г±Г«ГЁ Г¬Г» Г±Г¬Г®ГІГ°ГЁГ¬ Г¤Г®ГЎГ°Г®Г¦ГҐГ«Г ГІГҐГ«ГјГ­Г® 60вЂ”70% ГўГ°ГҐГ¬ГҐГ­ГЁ (Г®ГІГўГҐГ¤ГҐГ­Г­Г®ГЈГ® Г°Г Г§ГЈГ®ГўГ®Г°Гі) Г­Г  Г±Г®ГЎГҐГ±ГҐГ¤Г­ГЁГЄГ , Г®Г­ ГЇГ®Г­ГЁГ¬Г ГҐГІ, Г·ГІГ® Г­Г°Г ГўГЁГІГ±Гї Г­Г Г¬.
+            ГЏГ°ГЁГўГҐГІГ«ГЁГўГ»Г©, Г± ГіГ«Г»ГЎГЄГ®Г©, ГЄГ°Г ГІГЄГ®ГўГ°ГҐГ¬ГҐГ­Г­Г»Г© ГўГ§ГЈГ«ГїГ¤ Гў ГЈГ«Г Г§Г  Г°Г Г±Г±Г¬Г ГІГ°ГЁГўГ ГҐГІГ±Гї ГЄГ ГЄ Г±ГЁГЈГ­Г Г« ГЇГ®Г«Г®Г¦ГЁГІГҐГ«ГјГ­Г®ГЈГ® Г®ГІГ­Г®ГёГҐГ­ГЁГї, Г§Г ГЁГ­ГІГҐГ°ГҐГ±Г®ГўГ Г­Г­Г®Г±ГІГЁ, Г±ГЁГ¬ГЇГ ГІГЁГЁ, Г±ГІГ°ГҐГ¬Г«ГҐГ­ГЁГї ГЄ ГЄГ®Г­ГІГ ГЄГІГі.
+            ГЏГ°ГЁ ГЇГ°Г®Г¤Г®Г«Г¦ГЁГІГҐГ«ГјГ­Г®Г¬ Г®ГЎГ№ГҐГ­ГЁГЁ ГЅГІГЁГЄГҐГІ ГІГ°ГҐГЎГіГҐГІ Г±Г¬Г®ГІГ°ГҐГІГј Г­ГҐ Гў ГЈГ«Г Г§Г , Г  Гў Г«ГЁГ¶Г®, Г­ГҐ ГґГЁГЄГ±ГЁГ°ГіГї ГўГ­ГЁГ¬Г Г­ГЁГї Г­Г  ГЈГ«Г Г§Г Гµ Г±Г®ГЎГҐГ±ГҐГ¤Г­ГЁГЄГ . ГЏГ°ГЁГ±ГІГ Г«ГјГ­Г»Г© ГўГ§ГЈГ«ГїГ¤ Гў ГЈГ«Г Г§Г  Г°Г Г±Г±Г¬Г ГІГ°ГЁГўГ ГҐГІГ±Гї ГЄГ ГЄ ГЇГ°Г®ГїГўГ«ГҐГ­ГЁГҐ ГўГ°Г Г¦Г¤ГҐГЎГ­Г®Г±ГІГЁ вЂ” Г­ГҐ Г­Г Г¤Г® Г±Г¬Г®ГІГ°ГҐГІГј Г±Г«ГЁГёГЄГ®Г¬ ГЇГ°ГЁГ±ГІГ Г«ГјГ­Г® Г­ГЁ Г­Г  ГЄГ®ГЈГ®.
+            ГЏГ°ГЁ Г°ГҐГёГҐГ­ГЁГЁ Г¤ГҐГ«Г®ГўГ»Гµ ГўГ®ГЇГ°Г®Г±Г®Гў Г­Г Г¤Г® ГЁГ±ГЇГ®Г«ГјГ§Г®ГўГ ГІГј Г¤ГҐГ«Г®ГўГ®Г© ГўГ§ГЈГ«ГїГ¤ вЂ” Г­Г ГЇГ°Г ГўГ«ГҐГ­Г­Г»Г© Г­Г  ГІГ°ГҐГіГЈГ®Г«ГјГ­ГЁГЄ ГЈГ«Г Г§Г  вЂ” Г­Г®Г±, ГЅГІГ® Г±Г®Г§Г¤Г ГҐГІ ГўГЇГҐГ·Г ГІГ«ГҐГ­ГЁГҐ Г±ГҐГ°ГјГҐГ§Г­Г®Г±ГІГЁ Г­Г Г¬ГҐГ°ГҐГ­ГЁГ©.
+            ГЏГ°ГЁ Г¤Г°ГіГ¦ГҐГ±ГЄГ®Г¬ Г®ГЎГ№ГҐГ­ГЁГЁ ГўГ§ГЈГ«ГїГ¤ Г«ГіГ·ГёГҐ Г®ГЇГіГ±ГЄГ ГІГј Г­ГЁГ¦ГҐ вЂ” Г­Г  ГІГ°ГҐГіГЈГ®Г«ГјГ­ГЁГЄ ГЈГ«Г Г§Г  вЂ”Г°Г®ГІ, ГІГ ГЄГ®Г© ГўГ§ГЈГ«ГїГ¤ Г¤ГҐГ¬Г®Г­Г±ГІГ°ГЁГ°ГіГҐГІ Г¤Г°ГіГ¦ГҐГ±ГЄГ®ГҐ Г®ГІГ­Г®ГёГҐГ­ГЁГҐ, Г¦ГҐГ«Г Г­ГЁГҐ ГЄГ®Г­ГІГ ГЄГІГЁГ°Г®ГўГ ГІГј. Г‚Г§ГЈГ«ГїГ¤ Г®ГІ ГЈГ«Г Г§ Г¤Г® ГЈГ°ГіГ¤ГЁ ГЁ Г­ГЁГ¦ГҐ, Г­Г Г§Г»ГўГ ГҐГІГ±Гї ГЁГ­ГІГЁГ¬Г­Г»Г¬, Г®Г­ ГЇГ®ГЄГ Г§Г»ГўГ ГҐГІ Г«ГЁГ·Г­ГіГѕ Г§Г ГЁГ­ГІГҐГ°ГҐГ±Г®ГўГ Г­Г­Г®Г±ГІГј.
         </p>
 
         <center><img src="img/101.jpg" width="93.4%" "/></center>
@@ -57,16 +58,16 @@
                     <td width="*" ; height="220">
                         <ul>
                             <li>
-                                Фактор внешности
+                                Г”Г ГЄГІГ®Г° ГўГ­ГҐГёГ­Г®Г±ГІГЁ
                                 <ul type="square">
-                                    <li><a href="#klst">Классический стиль</a></li>
-                                    <li><a href="#rost">Романтический стиль</a></li>
-                                    <li><a href="#ekst">Экстровагантный стиль</a></li>
-                                    <li><a href="#spst">Спортивный стиль</a></li>
-                                    <li><a href="#dest">Деловой стиль</a></li>
-                                    <li><a href="#pr">Прическа, цвет волос</a></li>
-                                    <li><a href="#sl">Сложение</a></li>
-                                    <li><a href="#fzpr">Физическая привлекательность</a></li>
+                                    <li><a href="#klst">ГЉГ«Г Г±Г±ГЁГ·ГҐГ±ГЄГЁГ© Г±ГІГЁГ«Гј</a></li>
+                                    <li><a href="#rost">ГђГ®Г¬Г Г­ГІГЁГ·ГҐГ±ГЄГЁГ© Г±ГІГЁГ«Гј</a></li>
+                                    <li><a href="#ekst">ГќГЄГ±ГІГ°Г®ГўГ ГЈГ Г­ГІГ­Г»Г© Г±ГІГЁГ«Гј</a></li>
+                                    <li><a href="#spst">Г‘ГЇГ®Г°ГІГЁГўГ­Г»Г© Г±ГІГЁГ«Гј</a></li>
+                                    <li><a href="#dest">Г„ГҐГ«Г®ГўГ®Г© Г±ГІГЁГ«Гј</a></li>
+                                    <li><a href="#pr">ГЏГ°ГЁГ·ГҐГ±ГЄГ , Г¶ГўГҐГІ ГўГ®Г«Г®Г±</a></li>
+                                    <li><a href="#sl">Г‘Г«Г®Г¦ГҐГ­ГЁГҐ</a></li>
+                                    <li><a href="#fzpr">Г”ГЁГ§ГЁГ·ГҐГ±ГЄГ Гї ГЇГ°ГЁГўГ«ГҐГЄГ ГІГҐГ«ГјГ­Г®Г±ГІГј</a></li>
                                 </ul>
 
                             </li>
@@ -75,9 +76,9 @@
                     <td width="*" ; height="220">
                         <ul>
                             <li>
-                                Фактор взгляда
+                                Г”Г ГЄГІГ®Г° ГўГ§ГЈГ«ГїГ¤Г 
                                 <ul type="square">
-                                    <li><a href="#vz">Взгляд</a></li>
+                                    <li><a href="#vz">Г‚Г§ГЈГ«ГїГ¤</a></li>
                                 </ul>
 
                             </li>
@@ -86,12 +87,12 @@
                     <td width="*" ; height="220">
                         <ul>
                             <li>
-                                Фактор внешности
+                                Г”Г ГЄГІГ®Г° ГўГ­ГҐГёГ­Г®Г±ГІГЁ
                                 <ul type="square">
-                                    <li><a href="#poim">Поведенческий имидж</a></li>
-                                    <li><a href="#mi">Мимика</a></li>
-                                    <li><a href="#zhe">Жесты</a></li>
-                                    <li><a href="#po">Позы</a></li>
+                                    <li><a href="#poim">ГЏГ®ГўГҐГ¤ГҐГ­Г·ГҐГ±ГЄГЁГ© ГЁГ¬ГЁГ¤Г¦</a></li>
+                                    <li><a href="#mi">ГЊГЁГ¬ГЁГЄГ </a></li>
+                                    <li><a href="#zhe">Г†ГҐГ±ГІГ»</a></li>
+                                    <li><a href="#po">ГЏГ®Г§Г»</a></li>
                                 </ul>
 
                             </li>
@@ -110,7 +111,7 @@
                          onmouseout="this.src = 'img/x.png'; this.width = 30; this.height = 30;" />
                 </a>
                 <br /><br />
-                <p class="normal" ; style="background-color: rgba(0,0,0,0.8)">Над сайтом работал:<br />Cтудент группы 1ПИб-01-21оп<br />Игольницин Евгений<br />Тел: 8-921-069-08-58<br />Почта: igoln199@mail.ru</p>
+                <p class="normal" ; style="background-color: rgba(0,0,0,0.8)">ГЌГ Г¤ Г±Г Г©ГІГ®Г¬ Г°Г ГЎГ®ГІГ Г«:<br />CГІГіГ¤ГҐГ­ГІ ГЈГ°ГіГЇГЇГ» 1ГЏГ€ГЎ-01-21Г®ГЇ<br />Г€ГЈГ®Г«ГјГ­ГЁГ¶ГЁГ­ Г…ГўГЈГҐГ­ГЁГ©<br />Г’ГҐГ«: 8-921-069-08-58<br />ГЏГ®Г·ГІГ : igoln199@mail.ru</p>
 
             </div>
         </div>
@@ -123,13 +124,13 @@
                      onmouseout="this.src = 'img/28.png'; this.width = 60; this.height = 60;" />
             </a>
             <br /><br />
-            <a href="Information.html" ; title="Информация о сайте" ;>
+            <a href="Information.html" ; title="Г€Г­ГґГ®Г°Г¬Г Г¶ГЁГї Г® Г±Г Г©ГІГҐ" ;>
                 <img src="img/info.png" width="60" height="60"
                      onmouseover="this.src = 'img/info-1.png'; this.width = 240; this.height = 60;"
                      onmouseout="this.src = 'img/info.png'; this.width = 60; this.height = 60;" />
             </a>
             <br /><br />
-            <a href="where.html" ; title="Хотите узнать где нас найти?" ;>
+            <a href="where.html" ; title="Г•Г®ГІГЁГІГҐ ГіГ§Г­Г ГІГј ГЈГ¤ГҐ Г­Г Г± Г­Г Г©ГІГЁ?" ;>
                 <img src="img/where.png" width="60" height="60"
                      onmouseover="this.src = 'img/where-1.png'; this.width = 240; this.height = 60;"
                      onmouseout="this.src = 'img/where.png'; this.width = 60; this.height = 60;" />
@@ -141,7 +142,7 @@
                      onmouseout="this.src = 'img/33.png'; this.width = 60; this.height = 60;" />
             </a>
             <br /><br />
-            <a href="1ИгольницинИстория.doc" ; title="Cкачать документ со всей информацией для этого сайта?" ;>
+            <a href="1Г€ГЈГ®Г«ГјГ­ГЁГ¶ГЁГ­Г€Г±ГІГ®Г°ГЁГї.doc" ; title="CГЄГ Г·Г ГІГј Г¤Г®ГЄГіГ¬ГҐГ­ГІ Г±Г® ГўГ±ГҐГ© ГЁГ­ГґГ®Г°Г¬Г Г¶ГЁГҐГ© Г¤Г«Гї ГЅГІГ®ГЈГ® Г±Г Г©ГІГ ?" ;>
                 <img src="img/38.png" width="60" height="60"
                      onmouseover="this.src = 'img/38-1.png'; this.width = 240; this.height = 60;"
                      onmouseout="this.src = 'img/38.png'; this.width = 60; this.height = 60;" />
@@ -149,13 +150,13 @@
             <br /><br />
 
             <label for="toggle-1">
-                <img src="img/sne.png" width="60" height="60" title="Включить или выкоючить снегXD" ;
+                <img src="img/sne.png" width="60" height="60" title="Г‚ГЄГ«ГѕГ·ГЁГІГј ГЁГ«ГЁ ГўГ»ГЄГ®ГѕГ·ГЁГІГј Г±Г­ГҐГЈXD" ;
                      onmouseover="this.src = 'img/sne-1.png'; this.width = 240; this.height = 60;"
                      onmouseout="this.src = 'img/sne.png'; this.width = 60; this.height = 60;" />
             </label>
             <br /><br />
 
-            <a href="#" ; title="Вернуться к началу" style=" position: absolute; top:90%; left:0px;">
+            <a href="#" ; title="Г‚ГҐГ°Г­ГіГІГјГ±Гї ГЄ Г­Г Г·Г Г«Гі" style=" position: absolute; top:90%; left:0px;">
                 <img src="img/up.png" width="60" height="60">
             </a>
 
