--- a/where.html
+++ b/where.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
     <link rel="shortcut icon" href="img/son.png">
@@ -6,14 +7,14 @@
     <script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
     <script>
     $(document).ready(function(){
-        //Скрыть PopUp при загрузке страницы
+        //Г‘ГЄГ°Г»ГІГј PopUp ГЇГ°ГЁ Г§Г ГЈГ°ГіГ§ГЄГҐ Г±ГІГ°Г Г­ГЁГ¶Г»
         PopUpHide();
     });
-    //Функция отображения PopUp
+    //Г”ГіГ­ГЄГ¶ГЁГї Г®ГІГ®ГЎГ°Г Г¦ГҐГ­ГЁГї PopUp
     function PopUpShow(){
         $("#popup1").show();
     }
-    //Функция скрытия PopUp
+    //Г”ГіГ­ГЄГ¶ГЁГї Г±ГЄГ°Г»ГІГЁГї PopUp
     function PopUpHide(){
         $("#popup1").hide();
     }
@@ -28,7 +29,7 @@
     <input type="checkbox" id="toggle-1">
     <div class="base" ; style="margin-top: 0px; margin-bottom: 0px;">
 
-        <p class="preHigh" style="text-align: center; padding-left:100px; padding-right: 40px;">Нас можно найти здесь:</p>
+        <p class="preHigh" style="text-align: center; padding-left:100px; padding-right: 40px;">ГЌГ Г± Г¬Г®Г¦Г­Г® Г­Г Г©ГІГЁ Г§Г¤ГҐГ±Гј:</p>
 
         <center style=" margin-top: -20px;">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3443.853854796686!2d37.93090619256042!3d59.120223918582944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46afb7b3b89dc133%3A0x3270485ad5f20a5d!2z0KPRh9C10LHQvdGL0Lkg0LrQvtGA0L_Rg9GBIOKEliAxINCn0JPQoyDQuNC8LiDQkdC40LvQu9C4INCl0LDRgNC40L3Qs9GC0L7QvdCw!5e0!3m2!1sru!2sru!4v1578442693641!5m2!1sru!2sru"
@@ -52,16 +53,16 @@
                     <td width="*" ; height="220">
                         <ul>
                             <li>
-                                Фактор внешности
+                                Г”Г ГЄГІГ®Г° ГўГ­ГҐГёГ­Г®Г±ГІГЁ
                                 <ul type="square">
-                                    <li><a href="#klst">Классический стиль</a></li>
-                                    <li><a href="#rost">Романтический стиль</a></li>
-                                    <li><a href="#ekst">Экстровагантный стиль</a></li>
-                                    <li><a href="#spst">Спортивный стиль</a></li>
-                                    <li><a href="#dest">Деловой стиль</a></li>
-                                    <li><a href="#pr">Прическа, цвет волос</a></li>
-                                    <li><a href="#sl">Сложение</a></li>
-                                    <li><a href="#fzpr">Физическая привлекательность</a></li>
+                                    <li><a href="#klst">ГЉГ«Г Г±Г±ГЁГ·ГҐГ±ГЄГЁГ© Г±ГІГЁГ«Гј</a></li>
+                                    <li><a href="#rost">ГђГ®Г¬Г Г­ГІГЁГ·ГҐГ±ГЄГЁГ© Г±ГІГЁГ«Гј</a></li>
+                                    <li><a href="#ekst">ГќГЄГ±ГІГ°Г®ГўГ ГЈГ Г­ГІГ­Г»Г© Г±ГІГЁГ«Гј</a></li>
+                                    <li><a href="#spst">Г‘ГЇГ®Г°ГІГЁГўГ­Г»Г© Г±ГІГЁГ«Гј</a></li>
+                                    <li><a href="#dest">Г„ГҐГ«Г®ГўГ®Г© Г±ГІГЁГ«Гј</a></li>
+                                    <li><a href="#pr">ГЏГ°ГЁГ·ГҐГ±ГЄГ , Г¶ГўГҐГІ ГўГ®Г«Г®Г±</a></li>
+                                    <li><a href="#sl">Г‘Г«Г®Г¦ГҐГ­ГЁГҐ</a></li>
+                                    <li><a href="#fzpr">Г”ГЁГ§ГЁГ·ГҐГ±ГЄГ Гї ГЇГ°ГЁГўГ«ГҐГЄГ ГІГҐГ«ГјГ­Г®Г±ГІГј</a></li>
                                 </ul>
 
                             </li>
@@ -70,9 +71,9 @@
                     <td width="*" ; height="220">
                         <ul>
                             <li>
-                                Фактор взгляда
+                                Г”Г ГЄГІГ®Г° ГўГ§ГЈГ«ГїГ¤Г 
                                 <ul type="square">
-                                    <li><a href="#vz">Взгляд</a></li>
+                                    <li><a href="#vz">Г‚Г§ГЈГ«ГїГ¤</a></li>
                                 </ul>
 
                             </li>
@@ -81,12 +82,12 @@
                     <td width="*" ; height="220">
                         <ul>
                             <li>
-                                Фактор внешности
+                                Г”Г ГЄГІГ®Г° ГўГ­ГҐГёГ­Г®Г±ГІГЁ
                                 <ul type="square">
-                                    <li><a href="#poim">Поведенческий имидж</a></li>
-                                    <li><a href="#mi">Мимика</a></li>
-                                    <li><a href="#zhe">Жесты</a></li>
-                                    <li><a href="#po">Позы</a></li>
+                                    <li><a href="#poim">ГЏГ®ГўГҐГ¤ГҐГ­Г·ГҐГ±ГЄГЁГ© ГЁГ¬ГЁГ¤Г¦</a></li>
+                                    <li><a href="#mi">ГЊГЁГ¬ГЁГЄГ </a></li>
+                                    <li><a href="#zhe">Г†ГҐГ±ГІГ»</a></li>
+                                    <li><a href="#po">ГЏГ®Г§Г»</a></li>
                                 </ul>
 
                             </li>
@@ -105,7 +106,7 @@
                          onmouseout="this.src = 'img/x.png'; this.width = 30; this.height = 30;" />
                 </a>
                 <br /><br />
-                <p class="normal" ; style="background-color: rgba(0,0,0,0.8)">Над сайтом работал:<br />Cтудент группы 1ПИб-01-21оп<br />Игольницин Евгений<br />Тел: 8-921-069-08-58<br />Почта: igoln199@mail.ru</p>
+                <p class="normal" ; style="background-color: rgba(0,0,0,0.8)">ГЌГ Г¤ Г±Г Г©ГІГ®Г¬ Г°Г ГЎГ®ГІГ Г«:<br />CГІГіГ¤ГҐГ­ГІ ГЈГ°ГіГЇГЇГ» 1ГЏГ€ГЎ-01-21Г®ГЇ<br />Г€ГЈГ®Г«ГјГ­ГЁГ¶ГЁГ­ Г…ГўГЈГҐГ­ГЁГ©<br />Г’ГҐГ«: 8-921-069-08-58<br />ГЏГ®Г·ГІГ : igoln199@mail.ru</p>
 
             </div>
         </div>
@@ -118,7 +119,7 @@
                      onmouseout="this.src = 'img/28.png'; this.width = 60; this.height = 60;" />
             </a>
             <br /><br />
-            <a href="Information.html" ; title="Информация о сайте" ;>
+            <a href="Information.html" ; title="Г€Г­ГґГ®Г°Г¬Г Г¶ГЁГї Г® Г±Г Г©ГІГҐ" ;>
                 <img src="img/info.png" width="60" height="60"
                      onmouseover="this.src = 'img/info-1.png'; this.width = 240; this.height = 60;"
                      onmouseout="this.src = 'img/info.png'; this.width = 60; this.height = 60;" />
@@ -132,7 +133,7 @@
             </label>
             <br /><br />
 
-            <a href="where.html" ; title="Хотите узнать где нас найти?" ;>
+            <a href="where.html" ; title="Г•Г®ГІГЁГІГҐ ГіГ§Г­Г ГІГј ГЈГ¤ГҐ Г­Г Г± Г­Г Г©ГІГЁ?" ;>
                 <img src="img/where.png" width="60" height="60"
                      onmouseover="this.src = 'img/where-1.png'; this.width = 240; this.height = 60;"
                      onmouseout="this.src = 'img/where.png'; this.width = 60; this.height = 60;" />
@@ -144,13 +145,13 @@
                      onmouseout="this.src = 'img/33.png'; this.width = 60; this.height = 60;" />
             </a>
             <br /><br />
-            <a href="1ИгольницинИстория.doc" ; title="Cкачать документ со всей информацией для этого сайта?" ;>
+            <a href="1Г€ГЈГ®Г«ГјГ­ГЁГ¶ГЁГ­Г€Г±ГІГ®Г°ГЁГї.doc" ; title="CГЄГ Г·Г ГІГј Г¤Г®ГЄГіГ¬ГҐГ­ГІ Г±Г® ГўГ±ГҐГ© ГЁГ­ГґГ®Г°Г¬Г Г¶ГЁГҐГ© Г¤Г«Гї ГЅГІГ®ГЈГ® Г±Г Г©ГІГ ?" ;>
                 <img src="img/38.png" width="60" height="60"
                      onmouseover="this.src = 'img/38-1.png'; this.width = 240; this.height = 60;"
                      onmouseout="this.src = 'img/38.png'; this.width = 60; this.height = 60;" />
             </a>
             <br /><br />
-            <a href="#" ; title="Вернуться к началу" style=" position: absolute; top:90%; left:0px;">
+            <a href="#" ; title="Г‚ГҐГ°Г­ГіГІГјГ±Гї ГЄ Г­Г Г·Г Г«Гі" style=" position: absolute; top:90%; left:0px;">
                 <img src="img/up.png" width="60" height="60">
             </a>
 
